[ios] Ties the RefreshLocationBar experiment to UIRefreshPhase1.

The new location bar implementation requires that the UIRefreshPhase1
experiment also be enabled.  When UIRefreshPhase1 is disabled, also
disable RefreshLocationBar.

BUG=853408

Cq-Include-Trybots: luci.chromium.try:ios-simulator-full-configs;master.tryserver.chromium.mac:ios-simulator-cronet
Change-Id: Ia0266255cd59ca7487d766928846439a2ac8eed0
Reviewed-on: https://chromium-review.googlesource.com/1103524
Commit-Queue: Rohit Rao <rohitrao@chromium.org>
Commit-Queue: Justin Cohen <justincohen@chromium.org>
Reviewed-by: Justin Cohen <justincohen@chromium.org>
Cr-Commit-Position: refs/heads/master@{#567865}
Former-commit-id: 6c6db333c9286c8f9098b18d061bf821d88d616d